# TheShipGame

./: CMakeLists.txt  Mouse.h  README.md  application.cpp  application.h  main.cpp  ship.cpp  ship.h  ship2.h  utilities.h
.github/workflows/: codeql.yml
app/: application.cpp  application.h  mouse.cpp  mouse.h
entities/: meteorite.cpp  meteorite.h  ship.cpp  ship.h  ship2.cpp  ship2.h  star.cpp  star.h
render/: background.cpp  background.h  spritesheet.cpp  spritesheet.h  utilities.cpp  utilities.h
